分析模板/2026.05.15/周六025_利雅得胜利vs大阪钢巴_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周六025 | 采集日期：2026-05-17

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 利雅得胜利 |
| 客队 | 大阪钢巴 |
| 比赛时间 | 2026-05-17 01:45 |
| 赛事 | 亚洲冠军乙级联赛 |
| 让球 | -1 |
| 主队近况 | 近10场，8胜1平1负 进30球 失9球 胜率80% 赢盘率60% 大球率60% |
| 客队近况 | 近10场，2胜3平5负 进14球 失11球 胜率20% 赢盘率20% 大球率50% |
| 主队近况走势 | - |
| 主队盘路走势 | - |
| 客队近况走势 | - |
| 客队盘路走势 | - |
| 历史交锋 |  |
| 澳门推荐 |  |
| 澳门分析 |  |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (1.23, 4.85, 9.10),  # 竞*官*
    (1.40, 4.00, 6.00),  # 威**尔
    (1.44, 4.33, 5.50),  # 立*
    (1.40, 4.20, 6.25),  # **t3*5
    (1.40, 4.30, 7.75),  # I***rw**t*n
    (1.29, 5.10, 7.60),  # *冠
    (1.45, 4.20, 5.60),  # 易*博
    (1.44, 4.33, 6.00),  # 伟*
    (1.42, 4.33, 5.50),  # B**n
    (1.49, 4.11, 5.04),  # Pi****le平*
    (1.35, 4.30, 7.20),  # 10**t
    (1.44, 4.20, 5.25),  # C***l
    (1.33, 4.73, 6.20),  # 利*
    (1.42, 4.33, 5.50),  # S***t**g**t (博*堂)
    (1.47, 4.10, 5.10),  # IBC**t (沙*)
    (1.47, 4.10, 5.10),  # M****on88 (明*)
    (1.16, 5.60, 10.50),  # 香**会
    (1.47, 4.10, 5.10),  # 12**t (壹*博)
    (1.36, 4.20, 6.00),  # 88******
    (1.42, 4.60, 6.20),  # 大巨*
    (1.36, 4.50, 7.50),  # 必*
    (1.36, 4.30, 7.75),  # 18**t
    (1.47, 3.91, 5.77),  # 1x**t
    (1.43, 4.55, 5.90),  # **ts**n
    (1.44, 4.10, 5.25),  # I***rt*ps
    (1.35, 4.30, 7.50),  # **t-at-H**e
    (1.45, 4.20, 5.25),  # **tf**g
    (1.38, 4.35, 7.70),  # **ts**n S***tsb**k
    (1.36, 4.50, 7.50),  # **tway(必*)
    (1.36, 4.33, 5.50),  # B***eS***ts
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (1.27, 4.55, 8.20),  # 竞*官*
    (1.40, 4.00, 5.80),  # 威**尔
    (1.44, 4.20, 5.25),  # 立*
    (1.50, 4.00, 5.25),  # **t3*5
    (1.43, 4.40, 5.75),  # I***rw**t*n
    (1.42, 4.65, 5.50),  # *冠
    (1.45, 4.20, 5.60),  # 易*博
    (1.40, 4.50, 6.50),  # 伟*
    (1.42, 4.20, 5.75),  # B**n
    (1.45, 4.48, 6.22),  # Pi****le平*
    (1.46, 4.60, 6.00),  # 10**t
    (1.44, 4.20, 5.25),  # C***l
    (1.41, 4.25, 5.60),  # 利*
    (1.42, 4.20, 5.75),  # S***t**g**t (博*堂)
    (1.42, 4.25, 5.70),  # IBC**t (沙*)
    (1.42, 4.25, 5.70),  # M****on88 (明*)
    (1.30, 4.70, 6.60),  # 香**会
    (1.42, 4.25, 5.70),  # 12**t (壹*博)
    (1.44, 4.00, 5.50),  # 88******
    (1.45, 4.70, 6.00),  # 大巨*
    (1.49, 4.80, 6.40),  # 必*
    (1.43, 4.30, 6.00),  # 18**t
    (1.42, 4.67, 6.47),  # 1x**t
    (1.43, 4.55, 5.90),  # **ts**n
    (1.44, 4.10, 5.25),  # I***rt*ps
    (1.40, 4.20, 5.75),  # **t-at-H**e
    (1.45, 4.15, 5.50),  # **tf**g
    (1.43, 4.55, 5.90),  # **ts**n S***tsb**k
    (1.44, 4.50, 5.75),  # **tway(必*)
    (1.36, 4.20, 5.50),  # B***eS***ts
]
```

---

## 四、竞彩官方赔率

```python
# 竞彩官方赔率
jc_odds = {
    '胜': 1.90,
    '平': 3.63,
    '负': 3.05
}
```

---

## 五、快速复制数据块

```python
# ===== 竞彩赔率 =====
JC_WIN = 1.90
JC_DRAW = 3.63
JC_AWAY = 3.05

# ===== 初盘赔率（澳门，第3家）=====
MAC_INIT = (1.44, 4.33, 5.50)

# ===== 即时赔率（澳门，第3家）=====
MAC_REAL = (1.44, 4.20, 5.25)

# ===== 变动 =====
MAC_CHG = (
    round(float(MAC_REAL[0]) - float(MAC_INIT[0]), 2),
    round(float(MAC_REAL[1]) - float(MAC_INIT[1]), 2),
    round(float(MAC_REAL[2]) - float(MAC_INIT[2]), 2)
)

# ===== 澳门推荐 =====
MACAO_TIP = ""
```
