分析模板/2026.05.16/周六025_利雅得胜利vs大阪钢巴_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周六025 | 采集日期：2026-05-17

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 利雅得胜利 |
| 客队 | 大阪钢巴 |
| 比赛时间 | 2026-05-17 01:45 |
| 赛事 | 亚洲冠军乙级联赛 |
| 让球 | -1 |
| 主队近况 | 近10场，8胜1平1负 进30球 失9球 胜率80% 赢盘率60% 大球率60% |
| 客队近况 | 近10场，2胜3平5负 进14球 失11球 胜率20% 赢盘率20% 大球率50% |
| 主队近况走势 | DWLWWW |
| 主队盘路走势 | LWLWWW |
| 客队近况走势 | LLWDDL |
| 客队盘路走势 | LLWDLL |
| 历史交锋 |  |
| 澳门推荐 | 艾利雅得胜利 贏 |
| 澳门分析 | 大坂飞脚近期状态不佳，近2场均遭遇败仗，期间攻守失衡，他们今铺输球无可避免。 |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (1.23, 4.85, 9.10),  # 竞*官*
    (1.40, 4.00, 6.00),  # 威**尔
    (1.35, 4.20, 4.95),  # *门
    (1.44, 4.33, 5.50),  # 立*
    (1.40, 4.20, 6.25),  # **t3*5
    (1.40, 4.30, 7.75),  # I***rw**t*n
    (1.29, 5.10, 7.60),  # *冠
    (1.45, 4.20, 5.60),  # 易*博
    (1.44, 4.33, 6.00),  # 伟*
    (1.42, 4.33, 5.50),  # B**n
    (1.49, 4.11, 5.04),  # Pi****le平*
    (1.35, 4.30, 7.20),  # 10**t
    (1.44, 4.20, 5.25),  # C***l
    (1.33, 4.73, 6.20),  # 利*
    (1.48, 4.25, 5.50),  # U****t (优*客)
    (1.42, 4.33, 5.50),  # S***t**g**t (博*堂)
    (1.47, 4.10, 5.10),  # IBC**t (沙*)
    (1.47, 4.10, 5.10),  # M****on88 (明*)
    (1.16, 5.60, 10.50),  # 香**会
    (1.47, 4.10, 5.10),  # 12**t (壹*博)
    (1.36, 4.20, 6.00),  # 88******
    (1.42, 4.60, 6.20),  # 大巨*
    (1.36, 4.50, 7.50),  # 必*
    (1.36, 4.30, 7.75),  # 18**t
    (1.47, 3.91, 5.77),  # 1x**t
    (1.43, 4.55, 5.90),  # **ts**n
    (1.44, 4.10, 5.25),  # I***rt*ps
    (1.35, 4.30, 7.50),  # **t-at-H**e
    (1.45, 4.20, 5.25),  # **tf**g
    (1.38, 4.35, 7.70),  # **ts**n S***tsb**k
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (1.30, 4.50, 7.25),  # 竞*官*
    (1.40, 4.00, 5.80),  # 威**尔
    (1.35, 4.20, 4.95),  # *门
    (1.44, 4.20, 5.25),  # 立*
    (1.45, 4.00, 6.00),  # **t3*5
    (1.43, 4.40, 5.75),  # I***rw**t*n
    (1.43, 4.45, 5.60),  # *冠
    (1.45, 4.20, 5.80),  # 易*博
    (1.40, 4.50, 6.50),  # 伟*
    (1.44, 4.20, 5.50),  # B**n
    (1.45, 4.67, 6.82),  # Pi****le平*
    (1.43, 4.70, 6.40),  # 10**t
    (1.44, 4.20, 5.50),  # C***l
    (1.42, 4.15, 5.50),  # 利*
    (1.45, 4.35, 5.50),  # U****t (优*客)
    (1.44, 4.20, 5.50),  # S***t**g**t (博*堂)
    (1.46, 4.10, 5.30),  # IBC**t (沙*)
    (1.42, 4.20, 5.70),  # M****on88 (明*)
    (1.32, 4.60, 6.30),  # 香**会
    (1.42, 4.20, 5.70),  # 12**t (壹*博)
    (1.40, 4.00, 5.75),  # 88******
    (1.45, 4.60, 6.00),  # 大巨*
    (1.52, 4.70, 7.00),  # 必*
    (1.43, 4.50, 6.50),  # 18**t
    (1.44, 4.57, 6.27),  # 1x**t
    (1.46, 4.45, 5.70),  # **ts**n
    (1.45, 4.10, 5.75),  # I***rt*ps
    (1.45, 4.20, 5.50),  # **t-at-H**e
    (1.45, 4.20, 5.75),  # **tf**g
    (1.45, 4.45, 5.70),  # **ts**n S***tsb**k
]
```

---

## 四、竞彩官方赔率

```python
# 竞彩官方赔率
jc_odds = {
    '胜': 1.94,
    '平': 3.72,
    '负': 2.90
}
```

---

## 五、快速复制数据块

```python
# ===== 竞彩赔率 =====
JC_WIN = 1.94
JC_DRAW = 3.72
JC_AWAY = 2.90

# ===== 初盘赔率（澳门，第3家）=====
MAC_INIT = (1.35, 4.20, 4.95)

# ===== 即时赔率（澳门，第3家）=====
MAC_REAL = (1.35, 4.20, 4.95)

# ===== 变动 =====
MAC_CHG = (
    round(float(MAC_REAL[0]) - float(MAC_INIT[0]), 2),
    round(float(MAC_REAL[1]) - float(MAC_INIT[1]), 2),
    round(float(MAC_REAL[2]) - float(MAC_INIT[2]), 2)
)

# ===== 澳门推荐 =====
MACAO_TIP = "艾利雅得胜利 贏"
```
